src/objects/Payment__c.object
<CustomObject>
    <description>DAZN Payment object.  A payment is the money that customers send to pay for charges related to their subscriptions.
The Payment object holds all of the information about an individual payment, including the payment amount and to which invoices the payment is applied.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CRM Account that this payment is related to.</description>
        <inlineHelpText>The CRM Account that this payment is related to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingCode__c</fullName>
        <description>The accounting code for the payment. Accounting codes group transactions that contain similar accounting attributes.</description>
        <inlineHelpText>The accounting code for the payment. Accounting codes group transactions that contain similar accounting attributes.</inlineHelpText>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount of the payment.</description>
        <inlineHelpText>The amount of the payment.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedAmount__c</fullName>
        <description>The applied amount</description>
        <inlineHelpText>The applied amount</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedCreditBalanceAmount__c</fullName>
        <description>The amount of the payment to apply to a credit balance.</description>
        <inlineHelpText>The amount of the payment to apply to a credit balance.</inlineHelpText>
        <label>Applied Credit Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppliedInvoiceAmount__c</fullName>
        <description>The amount of the payment to apply to an invoice.</description>
        <inlineHelpText>The amount of the payment to apply to an invoice.</inlineHelpText>
        <label>Applied Invoice Amount</label>
        <summarizedField>PaymentInvoice__c.ApplyAmount__c</summarizedField>
        <summaryForeignKey>PaymentInvoice__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AuthTransactionId__c</fullName>
        <description>The authorization transaction ID from the payment gateway. Use this field for electronic payments, such as credit cards.</description>
        <inlineHelpText>The authorization transaction ID from the payment gateway. Use this field for electronic payments, such as credit cards.</inlineHelpText>
        <label>Auth Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankIdentificationNumber__c</fullName>
        <description>The first six digits of the credit card or debit card used for the payment, when applicable.</description>
        <inlineHelpText>The first six digits of the credit card or debit card used for the payment, when applicable.</inlineHelpText>
        <label>Bank Identification Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAccount__c</fullName>
        <description>The billing account that the payment is for.</description>
        <inlineHelpText>The billing account that the payment is for.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>CustomerAccount__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CancelledOn__c</fullName>
        <description>The date when the payment was canceled.</description>
        <inlineHelpText>The date when the payment was canceled.</inlineHelpText>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>The comment about the payment.</description>
        <inlineHelpText>The comment about the payment</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>The DAZN user who created the payment.</description>
        <inlineHelpText>The DAZN user who created the payment.</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the payment was created in DAZN system.</description>
        <inlineHelpText>The date when the payment was created in DAZN system.</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EXT_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id For Payment object,   Represents a DAZN Payment object Id</description>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The date when the payment takes effect.</description>
        <inlineHelpText>The date when the payment takes effect.</inlineHelpText>
        <label>Effective Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date when the payment takes effect.</description>
        <inlineHelpText>The date when the payment takes effect.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>The payment ID in DAZN system.</description>
        <externalId>true</externalId>
        <label>External ID(Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayOrderId__c</fullName>
        <description>The ID of the gateway order, which is the merchant-specified natural key value.</description>
        <inlineHelpText>The ID of the gateway order, which is the merchant-specified natural key value.</inlineHelpText>
        <label>Gateway Order ID</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayResponseCode__c</fullName>
        <description>The code returned from the payment gateway for the payment. This code is gateway-dependent.</description>
        <inlineHelpText>The code returned from the payment gateway for the payment. This code is gateway-dependent.</inlineHelpText>
        <label>Gateway Response Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GatewayResponse__c</fullName>
        <description>The message returned from the payment gateway for the payment. This message is gateway-dependent.</description>
        <inlineHelpText>The message returned from the payment gateway for the payment. This message is gateway-dependent.</inlineHelpText>
        <label>Gateway Response</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GatewayStatus__c</fullName>
        <description>The status of the payment in the gateway.</description>
        <label>Gateway State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MarkedForSubmission</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>NotSubmitted</fullName>
                </value>
                <value>
                    <fullName>FailedToSettle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <description>The unique identification number for the invoice that the payment is applied to.</description>
        <inlineHelpText>The unique identification number for the invoice that the payment is applied to.</inlineHelpText>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice that the payment is applied to.</description>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarkedForSubmissionOn__c</fullName>
        <description>The date when a payment was marked and waiting for batch submission to the payment process. Use this field for the Spectrum gateway only.</description>
        <inlineHelpText>The date when a payment was marked and waiting for batch submission to the payment process. Use this field for the Spectrum gateway only.</inlineHelpText>
        <label>Marked For Submission On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PaymentMethodId__c</fullName>
        <description>The id of the payment method used for the payment.</description>
        <label>Payment Method Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>The display name of the payment method used for the payment.</description>
        <inlineHelpText>The display name of the payment method used for the payment.</inlineHelpText>
        <label>Payment Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentNumber__c</fullName>
        <label>PaymentNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Payment Method that this payment is related to.</description>
        <inlineHelpText>The Payment Method that this payment is related to.</inlineHelpText>
        <label>Payment Method (Deprecated)</label>
        <referenceTo>PaymentMethod__c</referenceTo>
        <relationshipLabel>Payment</relationshipLabel>
        <relationshipName>Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <description>The transaction ID returned by the payment gateway. Use this field to reconcile payments between your gateway and DAZN Payments.</description>
        <inlineHelpText>The transaction ID returned by the payment gateway. Use this field to reconcile payments between your gateway and DAZN Payments.</inlineHelpText>
        <label>Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <description>The amount of the payment that is refunded. This field is null if no refund is made against the payment. Intended for use with AR Settlement.</description>
        <inlineHelpText>The amount of the payment that is refunded. This field is null if no refund is made against the payment. Intended for use with AR Settlement.</inlineHelpText>
        <label>Refund Amount (AR Settlement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RefundedAmount__c</fullName>
        <description>The amount of the payment that is refunded. This field is null if no refund is made against the payment.</description>
        <inlineHelpText>The amount of the payment that is refunded. This field is null if no refund is made against the payment.</inlineHelpText>
        <label>Refund Amount</label>
        <summarizedField>PaymentInvoice__c.RefundAmount__c</summarizedField>
        <summaryForeignKey>PaymentInvoice__c.Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SecondPaymentReferenceId__c</fullName>
        <description>The transaction ID returned by the payment gateway if there is an additional transaction for the payment.</description>
        <inlineHelpText>The transaction ID returned by the payment gateway if there is an additional transaction for the payment.</inlineHelpText>
        <label>Second Payment Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettledOn__c</fullName>
        <description>The date when the payment was settled in the payment processor.</description>
        <inlineHelpText>The date when the payment was settled in the payment processor.</inlineHelpText>
        <label>Settled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SoftDescriptorPhone__c</fullName>
        <description>A payment gateway-specific field that maps to DAZN for the gateways, Orbital and Verifi</description>
        <inlineHelpText>A payment gateway-specific field that maps to DAZN for the gateways, Orbital and Verifi</inlineHelpText>
        <label>Soft Descriptor Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoftDescriptor__c</fullName>
        <description>A payment gateway-specific field that maps to DAZN for the gateways, Orbital and Verifi.</description>
        <inlineHelpText>A payment gateway-specific field that maps to DAZN for the gateways, Orbital and Verifi.</inlineHelpText>
        <label>Soft Descriptor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the payment in the DAZN system. The value depends on the type of payment.</description>
        <inlineHelpText>The status of the payment in the DAZN system. The value depends on the type of payment.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <description>The date when the payment was submitted.</description>
        <inlineHelpText>The date when the payment was submitted.</inlineHelpText>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TransferedToAccounting__c</fullName>
        <description>Indicates if the payment was transferred to an external accounting system.</description>
        <inlineHelpText>Indicates if the payment was transferred to an external accounting system.</inlineHelpText>
        <label>Transferred to Accounting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates if the payment is external or electronic.</description>
        <inlineHelpText>Indicates if the payment is external or electronic.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnappliedAmount__c</fullName>
        <description>The unapplied amount</description>
        <inlineHelpText>The unapplied amount</inlineHelpText>
        <label>Unapplied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UpdatedById__c</fullName>
        <description>The DAZN user who last updated the payment.</description>
        <inlineHelpText>The DAZN user who last updated the payment.</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the payment was last updated in DAZN system.</description>
        <inlineHelpText>The date when the payment was last updated in DAZN system.</inlineHelpText>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Payment</label>
    <nameField>
        <label>Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>